--- a/notebooks/aula00.ipynb
+++ b/notebooks/aula00.ipynb
@@ -16,7 +16,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,7 +146,7 @@
     }
    ],
    "source": [
-    "import keyword\n",
+    "import keyword ##asds\n",
     "keyword.kwlist  #mostra palavras especiais, keywords"
    ]
   },
